--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/?size=100&id=9ECnYpBa4VDd&format=png&color=000000" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://img.icons8.com/?size=100&id=9ECnYpBa4VDd&format=png&color=000000"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skyline Resident</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Sora:wght@100..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .sora {
+        font-family: "Sora", serif;
+      }
+      .handlee {
+        font-family: "Handlee", serif;
+      }
+      .tinos {
+        font-family: "Tinos", serif;
+      }
+    </style>
   </head>
-  <body class="max-w-screen-2xl mx-auto scroll-smooth">
+  <body class="max-w-screen-2xl mx-auto scroll-smooth sora">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
